labs/m03l04/m03l04-02/m03-gateway.yaml
# Kubernetes: Production-Grade Container Orchestration — lesson m03l04 — Gateway API: GatewayClass, Gateway And HTTPRoute
# https://learnsome.tech/courses/kubernetes-course/watch?lesson=m03l04
# © LearnSome.tech
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
spec:
  gatewayClassName: nginx
  listeners:
    - name: web
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
spec:
  parentRefs:
    - name: public
  rules:
